--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -16,3 +16,4 @@ $font-size-s: 0.8rem;
 
 $padding-s: 10px;
 $padding-m: 15px;
+$padding-l: 30px;
